load the schema to landlord_db

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,16 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <title>The Landlord</title> 
+    <title>The Landlord</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
   </head>
   <body>
     <nav>
-      <a href='/apartments'>List All apartments</a>
-      <a href='/apartments/3'>View sample apartment</a>
-      <a href='/apartments/new'>Create a new apartment</a>
-      <a href='/apartments/3/tenants'>List tenants for sample apartment</a>
-      <a href='/apartments/3/tenants/new'>Add tenant to apartment</a>
+      <a href='/apartments'>List All Apartments</a>
+      <a href='/apartments/3'>View Sample Apartment</a>
+      <a href='/apartments/new'>Create a New Apartment</a>
+      <a href='/apartments/3/tenants'>List Tenants for Sample Apartment</a>
+      <a href='/apartments/3/tenants/new'>Add Tenant to Apartment</a>
     </nav>
     <%= yield %>
   </body>
