--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
   <body>
     <nav>
       <a href='/apartments'>List All Apartments</a>
-      <a href='/apartments/3'>View Sample Apartment</a>
+      <a href='/apartments/:id'>View Sample Apartment</a>
       <a href='/apartments/new'>Create a New Apartment</a>
       <a href='/apartments/3/tenants'>List Tenants for Sample Apartment</a>
       <a href='/apartments/3/tenants/new'>Add Tenant to Apartment</a>
