--- a/views/apartments/new.erb
+++ b/views/apartments/new.erb
@@ -1,8 +1,8 @@
 <form method="post" action="/apartments">
-  <input type="text" placeholder="Address">
-  <input type="text" placeholder="Monthly Rent">
-  <input type="text" placeholder="Square Feet">
-  <input type="text" placeholder="Number Beds">
-  <input type="text" placeholder="Number Baths">
+  <input type="text" name="address" placeholder="Address">
+  <input type="text" name="monthly_rent" placeholder="Monthly Rent">
+  <input type="text" name = "sqft" placeholder="Square Feet">
+  <input type="text" name="num_beds" placeholder="Number Beds">
+  <input type="text" name="num_baths" placeholder="Number Baths">
   <input type="submit">
 </form>
