add rent to apartments show page

--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -5,6 +5,7 @@
   <li>Sqft: <%= @apartment.sqft %></li>
   <li>Number of Beds: <%= @apartment.num_beds %></li>
   <li>Number of Baths: <%= @apartment.num_baths %></li>
+  <li>Monthly Rent: $<%= @apartment.monthly_rent %></li>
   <li>Tenants:
     <ul>
       <% @apartment.tenants.each do |tenant| %>
