build out add new apartment

--- a/views/apartments/new.erb
+++ b/views/apartments/new.erb
@@ -1,3 +1,4 @@
+<h2>Add a New Apartment</h2>
 <form method="post" action="/apartments">
   <input type="text" name="apartment[address]" placeholder="Address">
   <input type="text" name="apartment[monthly_rent]" placeholder="Monthly Rent">
