--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,8 +9,8 @@
       <a href='/apartments'>List All Apartments</a>
       <a href='/apartments/:id'>View Sample Apartment</a>
       <a href='/apartments/new'>Create a New Apartment</a>
-      <a href='/apartments/3/tenants'>List Tenants for Sample Apartment</a>
-      <a href='/apartments/3/tenants/new'>Add Tenant to Apartment</a>
+      <a href='/apartments/:id/tenants'>List Tenants for Sample Apartment</a>
+      <a href='/apartments:id/tenants/new'>Add Tenant to Apartment</a>
     </nav>
     <%= yield %>
   </body>
