--- a/views/apartments/index.erb
+++ b/views/apartments/index.erb
@@ -1,5 +1,7 @@
-<ul>
-  <li><a href='/apartments/1'>Apartment 1</a></li>
-  <li><a href='/apartments/2'>Apartment 2</a></li>
-  <li><a href='/apartments/3'>Apartment 3</a></li>
-</ul>
+<h2>All Apartments <a href="/apartments/new">(+)</a></h2>
+
+<% @apartments.each do |apartment| %>
+  <ul>
+    <li>Address: <a href="/apartments/<%= apartment.id %>"><%= apartment.address %></a></li>
+  </ul>
+<% end %>
