--- a/views/apartments/new.erb
+++ b/views/apartments/new.erb
@@ -1,8 +1,20 @@
+<h2>New Apartment</h2>
+
 <form method="post" action="/apartments">
-  <input type="text" placeholder="Address">
-  <input type="text" placeholder="Monthly Rent">
-  <input type="text" placeholder="Square Feet">
-  <input type="text" placeholder="Number Beds">
-  <input type="text" placeholder="Number Baths">
-  <input type="submit">
+  <label>Address:</label>
+  <input name="apartment[address]">
+
+  <label>Monthly Rent:</label>
+  <input name="apartment[monthly_rent]">
+
+  <label>Square Feet:</label>
+  <input name="apartment[sqft]">
+
+  <label>Number of Beds:</label>
+  <input name="apartment[num_beds]">
+
+  <label>Number of Baths:</label>
+  <input name="apartment[num_baths]">
+
+  <input type="submit" value="Create Apartment">
 </form>
