--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,17 +1,19 @@
 <!doctype html>
 <html>
   <head>
-    <title>The Landlord</title> 
+    <title>The Landlord v4</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
   </head>
   <body>
     <nav>
-      <a href='/apartments'>List All apartments</a>
-      <a href='/apartments/3'>View sample apartment</a>
-      <a href='/apartments/new'>Create a new apartment</a>
-      <a href='/apartments/3/tenants'>List tenants for sample apartment</a>
-      <a href='/apartments/3/tenants/new'>Add tenant to apartment</a>
+      <a href="/apartments">List Apartments</a>
+      <a href="/tenants">List Tenants</a>
+      <a href="/apartments/new">Create new Apartment</a>
+      <a href="/tenants/new">Add new Tenant</a>
     </nav>
-    <%= yield %>
+    <br>
+    <div class="content">
+      <%= yield %>
+    </div>
   </body>
 </html>
