build out tenants new.erb hooray

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,7 @@
       <a href='/apartments/:id'>View Sample Apartment</a>
       <a href='/apartments/new'>Create a New Apartment</a>
       <a href='/apartments/:id/tenants'>List Tenants for Sample Apartment</a>
-      <a href='/apartments:id/tenants/new'>Add Tenant to Apartment</a>
+      <a href='/apartments/:id/tenants/new'>Add Tenant to Apartment</a>
     </nav>
     <%= yield %>
   </body>
