--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -6,11 +6,5 @@
   <li>Number of Beds: <%= @apartment.num_beds %></li>
   <li>Number of Baths: <%= @apartment.num_baths %></li>
   <li>Monthly Rent: $<%= @apartment.monthly_rent %></li>
-  <li><a href="/apartments/<%= @apartment.id %>/tenants">Tenants:</a>
-    <ul>
-      <% @apartment.tenants.each do |tenant| %>
-        <li><%= tenant.name %></li>
-      <% end %>
-    </ul>
-  </li>
+  <li><a href="/apartments/<%= @apartment.id %>/tenants">View <%= @apartment.tenants.count%> Tenants</a></li>
 </ul>
