grammar and punctuation

--- a/views/tenants/index.erb
+++ b/views/tenants/index.erb
@@ -8,4 +8,7 @@
 <% end %>
 <ul>
   <li><a href="/apartments/<%= @apartment.id %>/tenants/new">Add a Tenant</a></li>
+  <li>
+    <a href="/apartments/<%= @apartment.id %>">Return to Apartment Details</a></li>
+  </li>
 </ul>
