attempted to complete the assignment, attempted to replicate code from the in-class-exercise we did today

--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,11 @@
-This is info about apartment #3.
+<h2>
+  <%= @apartment.address %>
+</h2>
+<h3>
+  <%= @apartment.monthly_rent %>
+</h3>
+<p>
+  <%= @apartment.sqft %>,
+  <%= @apartment.num_beds %>,
+  <%= @apartment.num_baths %>.
+</p>
