--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -1,1 +1,12 @@
-form for adding a new tenant
+<form method="post" action="/apartments">
+
+  <input type="text" placeholder="Name">
+
+  <input type="text" placeholder="Age">
+
+  <input type="text" placeholder="Gender">
+
+  <input type="text" placeholder="Apartment ID">
+
+  <input type="submit" value="Add Tenant">
+</form>
