--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,2 @@
-This is info about apartment #3.
+<h3>This is info about apartment #3<h3>
+<a href ='/apartment<%= @apartment.id%>/edit'>Edit Apartment</a>
