--- a/views/apartments/new.erb
+++ b/views/apartments/new.erb
@@ -1,8 +1,11 @@
-<form method="post" action="/apartments">
+# ======= new
+<h2>New Apartment</h2>
+
+<form method="post" action="/apartments/create">
   <input type="text" placeholder="Address">
   <input type="text" placeholder="Monthly Rent">
   <input type="text" placeholder="Square Feet">
   <input type="text" placeholder="Number Beds">
   <input type="text" placeholder="Number Baths">
-  <input type="submit">
+  <input type="submit" value="Create">
 </form>
