--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,8 @@
-This is info about apartment #3.
+<h1>Welcome to Landlord 4.0</h1>
+
+<h2><%= @apartment.address %></h2>
+
+<h4><%= @apartment.monthly_rent %></h4>
+<h4><%= @apartment.sqft %></h4>
+<h4><%= @apartment.num_beds %></h4>
+<h4><%= @apartment.num_baths %></h4>
