--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,16 +1,18 @@
 <!doctype html>
 <html>
   <head>
-    <title>The Landlord</title> 
+    <title>The Landlord</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
   </head>
   <body>
+    <header>
+      <h1>DC Property Management</h1>
+    </header>
     <nav>
       <a href='/apartments'>List All apartments</a>
-      <a href='/apartments/3'>View sample apartment</a>
+      <a href='/apartments/sample'>View sample apartment</a>
       <a href='/apartments/new'>Create a new apartment</a>
-      <a href='/apartments/3/tenants'>List tenants for sample apartment</a>
-      <a href='/apartments/3/tenants/new'>Add tenant to apartment</a>
+      <a href='/apartments/sample/tenants'>List tenants for sample apartment</a>
     </nav>
     <%= yield %>
   </body>
