added functionality for adding tenants to apartments and listing tenants for sample apartment

--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -14,6 +14,9 @@
         No. of baths: <%=@apartment.num_baths%>
     </li>
     <li>
-        Current tenants: <%=@apartment.tenants%> (add tenant)
+        Current tenants: <% @apartment.tenants.each do |tenant|%>
+                        <%= tenant.name %>
+                        <% end %>
+         <a href="/apartments/tenants/new">(add tenant)</a>
     </li>
 </ul>
