seeded database and created instance variables

--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,5 @@
-This is info about apartment #3.
+<h2>
+  <%= @apartments.address %>
+</h2>
+
+<h3>This apartment is <%= @apartments.sqft %> sqft and has <%= @apartments.num_beds %> beds and <%= @apartments.num_baths %> baths. It costs $<%= @apartments.num_baths %> a month.</h3>
