--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,9 @@
-This is info about apartment #3.
+<h1><%= @apartment.address %></h1>
+
+<ul>
+  <li>Monthly Rent: $<%= @apartment.monthly_rent%></li>
+  <li>Square Feet: <%= @apartment.sqft %></li>
+  <li>Number of Bedrooms: <%= @apartment.num_beds %></li>
+  <li>Number of Bathrooms: <%= @apartment.num_baths %></li>
+</ul>
+<a href="/apartments/<%= @apartment.id %>/tenants">Show Tenants</a>
