--- a/views/tenants/index.erb
+++ b/views/tenants/index.erb
@@ -1,1 +1,7 @@
-Listing tenants for apartment #3
+<h1><%= @apartment.address %></h1>
+<ul>
+  <% @tenants.each do |tenant|%>
+  <li><%= tenant.name %> is a <%= tenant.age %> year old <%= tenant.gender%></li>
+  <% end %>
+</ul>
+<a href="/apartments/<%= @apartment.id%>/tenants/new">Add a Tenant</a>
