added links to each apt to go to it's show page

--- a/views/apartments/index.erb
+++ b/views/apartments/index.erb
@@ -2,5 +2,9 @@
 
 <ul>
 <% @apartments.each do |apartment| %>
-  <li><%= apartment.address %></li>
+  <li>
+    <a href="/apartments/<%= apartment.id %>">
+      <%= apartment.address %>
+    </a>
+  </li>
 <% end %>
