--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -1,1 +1,15 @@
-form for adding a new tenant
+<h2>Add New Tenant</h2>
+
+<form method="post" action="/tenants>
+<input name="tenant[apartment_id]" type="hidden" value="<%= @apartment.id %>">
+  <label>Name:</label>
+  <input name="tenant[name]" type"text">
+
+  <label>Age:</label>
+  <input name="tenant[age]" type="text">
+
+  <label>Gender:</label>
+  <input name="tenant[gender]" type="text" >
+
+  <input type="submit" value="Add New Tenant">
+</form>
