set up controllers and views

--- a/views/apartments/new.erb
+++ b/views/apartments/new.erb
@@ -1,8 +1,8 @@
 <form method="post" action="/apartments">
-  <input type="text" placeholder="Address">
-  <input type="text" placeholder="Monthly Rent">
-  <input type="text" placeholder="Square Feet">
-  <input type="text" placeholder="Number Beds">
-  <input type="text" placeholder="Number Baths">
+  <input name="apartment[address]" type="text" placeholder="Address">
+  <input name="apartment[monthly_rent]" type="text" placeholder="Monthly Rent">
+  <input name="apartment[sqft]" type="text" placeholder="Square Feet">
+  <input name="apartment[num_beds]" type="text" placeholder="Number Beds">
+  <input name="apartment[num_baths]" type="text" placeholder="Number Baths">
   <input type="submit">
 </form>
