--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -1,1 +1,7 @@
-form for adding a new tenant
+<h2>Add Tenant</h2>
+<form method="post" action="/apartments/<%=@apartment.id%>/tenants">
+  <input name="tenant[name]" type="text" placeholder="Name">
+  <input name="tenant[age]" type="text" placeholder="Age">
+  <input name="tenant[gender]" type="text" placeholder="Gender">
+  <input type="submit">
+</form>
