--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,5 @@
-This is info about apartment #3.
+<!-- This is info about apartment #3. -->
+
+<h2><%= @apartment.address %></h2>
+
+<h4><%= @apartment.monthly_rent %></h4>
