--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -1,1 +1,10 @@
-form for adding a new tenant
+
+<form method="post" action="/tenants">
+
+  <input type="text" placeholder="Name">
+  <input type="text" placeholder="Age">
+  <input type="text" placeholder="Gender">
+
+  <input type="submit">
+  
+</form>
