--- a/views/apartments/new.erb
+++ b/views/apartments/new.erb
@@ -3,6 +3,6 @@
   <input type="text" placeholder="Monthly Rent">
   <input type="text" placeholder="Square Feet">
   <input type="text" placeholder="Number Beds">
-  <input type="text" placeholder="Number Baths">
+  <input type="text" placeholder="Number Beds">
   <input type="submit">
 </form>
