added listing apartments, can add new apartments

--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,5 @@
-This is info about apartment #3.
+<h2>Address: <%=@apartments.address %></h2>
+<h2>Monthly Rent: <%=@apartments.monthly_rent %></h2>
+<h2>Size: <%=@apartments.sqft %></h2>
+<h2>Beds: <%=@apartments.num_beds %></h2>
+<h2>Baths: <%=@apartments.num_baths %></h2>
