--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -1,1 +1,8 @@
-form for adding a new tenant
+<h3>Adding New Tenant to Apartment</h3>
+  <form method="post" action="/apartments/<%=@apartment.id%>/index">
+  <input type="text" name="tenant[name]" placeholder="Name">
+  <input type="text" name="tenant[age]" placeholder="Age">
+  <input type="text" name="tenant[gender]" placeholder="Gender">
+  <input type="text" name="tenant[apartment_id]" placeholder="Apartment ID">
+  <input type="submit">
+</form>
