--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,10 @@
-This is info about apartment #3.
+<h2>Apartment <%=@apartment.id %></h2>
+<a href='/apartments/<%=@apartment.id%>/edit'>Edit Apartment</a>
+
+<ul>
+  <li>Address: <%=@apartment.address%></li>
+  <li>Monthly Rent: <%=@apartment.monthly_rent%></li>
+  <li>Square Feet: <%=@apartment.sqft%></li>
+  <li>Beds: <%=@apartment.num_beds%></li>
+  <li>Baths: <%=@apartment.num_baths%></li>
+</ul>
