--- a/views/tenants/index.erb
+++ b/views/tenants/index.erb
@@ -1,1 +1,6 @@
-Listing tenants for apartment #3
+<ul>
+  <li><a href='/apartments/<%=@apartment.id%>/tenants/new'>Add New Tenant</a></li>
+  <% @apartment.tenants.each do |tenant| %>
+  <li><%= tenant.name %>, <%= tenant.age %> years old, <%= tenant.gender %></li>
+<% end %>
+</ul>
