tried to get the tenant page to display the apartment address instead of the ID but to no avail

--- a/views/apartments/index.erb
+++ b/views/apartments/index.erb
@@ -2,7 +2,7 @@
     <% @apartments.each do | apartment | %>
   <li>
       <a href='/apartments/<%= apartment.id %>'>
-          <%= apartment.address%>
+          <%= apartment%>
       </a>
   </li>
   <% end %>
