--- a/views/tenants/show.erb
+++ b/views/tenants/show.erb
@@ -2,4 +2,4 @@
 
 <h3>Age: <%=@tenant.age%></h3>
 <h3>Gender: <%=@tenant.gender%></h3>
-<h3>Apartment ID: <%=@apartment%></h3>
+<h3>Apartment ID: <%=@tenant.apartment_id%></h3>
