--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,16 @@
-This is info about apartment #3.
+<ul>
+<li>
+  <h2> <%= @apartment.address %></h2>
+<li>
+  <h4> Monthly Rent: <%= @apartment.monthly_rent %> </h4>
+</li>
+<li>
+  <h4> Square Foot: <%= @apartment.sqft %> </h4>
+</li>
+<li>
+  <h4> Bedrooms: <%= @apartment.num_beds %> </h4>
+</li>
+<li>
+  <h4> Bathrooms: <%= @apartment.num_baths %> </h4>
+</li>
+</ul>
