--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -1,1 +1,19 @@
-form for adding a new tenant
+<h2>New Tenant</h2>
+<ul>
+<form method="post" action="/tenants">
+  <li>
+  <label>Name:</label>
+  <input name="apartment[name]">
+  </li>
+  <li>
+  <label>Age:</label>
+  <input name="apartment[age]">
+  </li>
+  <label>Gender:</label>
+  <input name="apartment[gender]">
+  </li>
+  <li>
+  <input type="submit" value="Add Tenant">
+  </li>
+</form>
+</ul>
