--- a/views/apartments/new.erb
+++ b/views/apartments/new.erb
@@ -1,8 +1,28 @@
+<h2>New Apartment</h2>
+<ul>
 <form method="post" action="/apartments">
-  <input type="text" placeholder="Address">
-  <input type="text" placeholder="Monthly Rent">
-  <input type="text" placeholder="Square Feet">
-  <input type="text" placeholder="Number Beds">
-  <input type="text" placeholder="Number Baths">
-  <input type="submit">
+  <li>
+  <label>Address:</label>
+  <input name="apartment[address]">
+  </li>
+  <li>
+  <label>Monthly Rent:</label>
+  <input name="apartment[monthly_rent]">
+  </li>
+  <li>
+  <label>Square foot:</label>
+  <input name="apartment[sqft]">
+  </li>
+  <li>
+  <label>Bedrooms:</label>
+  <input name="apartment[num_beds]">
+  </li>
+  <li>
+  <label>Bathrooms:</label>
+  <input name="apartment[num_baths]">
+  </li>
+  <li>
+  <input type="submit" value="Create Apartment">
+  </li>
 </form>
+</ul>
