--- a/views/tenants/index.erb
+++ b/views/tenants/index.erb
@@ -1,1 +1,7 @@
-Listing tenants for apartment #3
+<h2>All Tenants <a href="/tenants/new">(+)</a></h2>
+
+<% @tenants.each do |tenant| %>
+  <ul>
+    <li>Name: <a href="/tenants/<%= tenant.id %>"><%= tenant.name.capitalize %></a> Address: <%= tenant.apartment.address %></li>
+  </ul>
+<% end %>
