--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,9 @@
-This is info about apartment #3.
+<h2> Apartment <%= @apartment.id %></h2>
+<h3>Address</h3>
+<p><%= @apartment.address %></p>
+<h3>Monthly Rent </h3>
+<p><%= @apartment.monthly_rent %></p>
+<h3>Square Footage</h3>
+<p><%= @apartment.sqft %></p>
+<h3>Number of Beds</h3>
+<p><%= @apartment.num_beds %></p>
