--- a/views/tenants/index.erb
+++ b/views/tenants/index.erb
@@ -1,1 +1,11 @@
-Listing tenants for apartment #3
+<h2>Apartment at <%= @apartment.address %></h2>
+<h3>Tenants</h3>
+<ul>
+  <% tenants = @aparment.tenants %>
+  <%if tenants.size != 0%>
+    <% tenants.each do |tenant| %>
+      <li><%= tenant %></li>
+    <%end%>
+  <%else%>
+    <p>The apartment is unoccupied</p>
+</ul>
