--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,48 @@
-This is info about apartment #3.
+<h1>
+  Apartment: <%= @apartment %>
+  <a href="/apartments/<%= @apartment.id %>/edit">(edit)</a>
+</h1>
+<section class="apartment">
+  <p>
+    <label>Address</label>
+    <%= @apartment.address %>
+  </p>
+  <p>
+    <label>Monthly Rent</label>
+    <%= @apartment.rent_as_currency %>
+  </p>
+  <p>
+    <label>Square Footage</label>
+    <%= @apartment.sqft %>
+  </p>
+  <p>
+    <label>Number of Bedrooms</label>
+    <%= @apartment.num_beds %>
+  </p>
+  <p>
+    <label>Number of Bathrooms</label>
+    <%= @apartment.num_baths %>
+  </p>
+  <img src="<%= @apartment.image_url(256,256) %>" />
+</section>
+
+<section>
+  <h2>
+    <% tenants_url = "/apartments/#{@apartment.id}/tenants" %>
+    <a href="<%= tenants_url %>">Tenants</a>
+    <a href="/apartments/<%= @apartment.id %>/tenants/new">(+)</a>
+  </h2>
+
+  <% tenants = @apartment.tenants %>
+  <% if tenants.size == 0 %>
+    None found
+  <% else %>
+    <ul>
+      <% tenants.each do |tenant| %>
+        <li>
+          <%= tenant %>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
+</section>
