--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -1,1 +1,15 @@
-form for adding a new tenant
+<form method="post" action="/apartments/<%= @apartment.id %>/tenants">
+  <input name="tenant[apartment_id]" type="hidden" value="<%= @apartment.id %>">
+
+  <label for="tenant[name]">Name</label>
+  <input name="apartment[name]" type="text">
+
+  <label for="apartment[age]">Age</label>
+  <input name="apartment[age]" type="text">
+
+  <label for="apartment[gender]">Gender</label>
+  <input name="apartment[gender]" type="text">
+
+
+  <input type="submit">
+</form>
