--- a/views/apartments/index.erb
+++ b/views/apartments/index.erb
@@ -1,5 +1,8 @@
 <ul>
+  <a href='/apartments/<%= @apartment.id %>'><%= @apartment %></a>
+  <% @apartment.each do |apartment| %>
   <li><a href='/apartments/1'>Apartment 1</a></li>
   <li><a href='/apartments/2'>Apartment 2</a></li>
   <li><a href='/apartments/3'>Apartment 3</a></li>
+<% end %>
 </ul>
