--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,13 @@
-This is info about apartment #3.
+<h2>Apartment <%= @apartment %>
+  <a href ="/apartments/<%= @apartment.id %>/edit"></a>
+</h2>
+
+<h3>Address <%= @apartment.address %> </h3>
+
+<h3> Monthly Rent <%= @apartment.monthly_rent %> </h3>
+
+<h3> Square Feet <%= @apartment.sqft %> </h3>
+
+<h3> Number of Beds <%= @apartmnet.num_beds %> </h3>
+
+<h3> Number of Baths <%= @apartment.num_baths %> </h3>
