--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,3 @@
-This is info about apartment #3.
+<h1><%= @apartment.address %></h1>
+
+<p>This apartment lists at $ <%= @apartment.monthly_rent %> a month, and provides <%= @apartment.sqft %> sqft, with <%= @apartment.num_beds %> beds and <%= @apartment.num_baths %> baths</p>
