--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -1,1 +1,8 @@
-form for adding a new tenant
+<h2>Add a New Tenant</h2>
+
+<form method="post" action="/apartments">
+  <input type="text" name="tenant[name]" placeholder="Name">
+  <input type="text" name="tenant[age]" placeholder="Age">
+  <input type="text" name="tenant[gender]" placeholder="Gender">
+  <input type="submit" value="Create">
+</form>
