--- a/views/tenants/index.erb
+++ b/views/tenants/index.erb
@@ -1,1 +1,7 @@
-Listing tenants for apartment #3
+<h2>Tenants for Apartment 3</h2>
+
+<ul>
+  <% @tenants.each do |tenant| %>
+    <li><%= tenant.name %></li>
+    <% end %>
+</ul>
