--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,9 @@
-This is info about apartment #3.
+<h2><%= @apartments.address%></h2>
+
+  <ul>
+    <li><%= @apartments.monthly_rent %></li>
+    <li><%= @apartments.sqft %></li>
+    <li><%= @apartments.num_beds %></li>
+    <li><%= @apartments.num_baths %></li>
+
+  </ul>
