--- a/views/apartments/new.erb
+++ b/views/apartments/new.erb
@@ -1,8 +1,34 @@
-<form method="post" action="/apartments">
+<!-- <form method="post" action="/apartments">
   <input type="text" placeholder="Address">
   <input type="text" placeholder="Monthly Rent">
   <input type="text" placeholder="Square Feet">
   <input type="text" placeholder="Number Beds">
   <input type="text" placeholder="Number Baths">
   <input type="submit">
+</form> -->
+
+<h2>New Apartment</h2>
+
+  <form action="/apartment" method="post">
+    <label for="apartment[address]">Address</label>
+    <input name="apartment[address]">
+
+  <form action="/apartment" method="post">
+    <label for="apartment[monthly_rent]">Monthly Rent</label>
+    <input name="apartment[monthly_rent]">
+
+  <form action="/apartment" method="post">
+    <label for="apartment[sqft]">Square Feet</label>
+    <input name="apartment[sqft]">
+
+  <form action="/apartment" method="post">
+    <label for="apartment[num_beds]">Number Beds</label>
+    <input name="apartment[num_beds]">
+
+  <form action="/apartment" method="post">
+    <label for="apartment[num_baths]">Number Baths</label>
+    <input name="apartment[num_baths]">
+
+  <input type="submit" value="Submit">
+
 </form>
