--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -6,3 +6,13 @@
   <li>Beds: <%= @apartment.num_beds %></li>
   <li>Baths: <%= @apartment.num_baths %></li>
 </ul>
+<h3>Tenants:</h3>
+<ul>
+  <% @tenants.each do |tenant| %>
+    <li>
+      <a href="/tenants/<%= tenant.id %>">
+        <%= tenant.name %>
+      </a>
+    </li>
+  <% end %>
+</ul>
