--- a/views/apartments/new.erb
+++ b/views/apartments/new.erb
@@ -1,8 +1,9 @@
+<h3>Create New Apartment</h3>
 <form method="post" action="/apartments">
-  <input type="text" placeholder="Address">
-  <input type="text" placeholder="Monthly Rent">
-  <input type="text" placeholder="Square Feet">
-  <input type="text" placeholder="Number Beds">
-  <input type="text" placeholder="Number Baths">
+  <input type="text" placeholder="Address" name="apartment[address]">
+  <input type="text" placeholder="Monthly Rent" name="apartment[monthly_rent]">
+  <input type="text" placeholder="Square Feet" name="apartment[sqft]">
+  <input type="text" placeholder="Number Beds" name="apartment[num_beds]">
+  <input type="text" placeholder="Number Baths" name="apartment[num_baths]">
   <input type="submit">
 </form>
