--- a/views/apartments/new.erb
+++ b/views/apartments/new.erb
@@ -1,8 +1,20 @@
-<form method="post" action="/apartments">
-  <input type="text" placeholder="Address">
-  <input type="text" placeholder="Monthly Rent">
-  <input type="text" placeholder="Square Feet">
-  <input type="text" placeholder="Number Beds">
-  <input type="text" placeholder="Number Baths">
-  <input type="submit">
+<h2>New apartment</h2>
+
+<form action="/apartments" method="post" >
+  <label for="apartment[address]">Address:</label>
+  <input name="apartment[address]">
+
+  <label for="apartmentx[monthly_rent]">Monthly Rent:</label>
+  <input name="apartment[monthly_rent]">
+
+  <label for="apartment[sqft]">sqft:</label>
+  <input name="apartment[sqft]">
+
+  <label for="apartment[num_beds]">Number of beds:</label>
+  <input name="apartment[num_beds]">
+
+  <label for="apartment[num_baths]">num_baths:</label>
+  <input name="apartment[num_baths]">
+
+  <input type="submit" value="Create">
 </form>
