--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,5 @@
-This is info about apartment #3.
+<h2><%= @apartment.address %> <a href = "/apartments/<%= @apartment.id %>/edit">(edit)</a></h2>
+<h4><%= @apartment.monthly_rent %></h4>
+<h4><%= @apartment.sqft %></h4>
+<h4><%= @apartment.num_beds %></h4>
+<h4><%= @apartment.num_baths %></h4>
