--- a/views/apartments/new.erb
+++ b/views/apartments/new.erb
@@ -1,8 +1,21 @@
-<form method="post" action="/apartments">
-  <input type="text" placeholder="Address">
-  <input type="text" placeholder="Monthly Rent">
-  <input type="text" placeholder="Square Feet">
-  <input type="text" placeholder="Number Beds">
-  <input type="text" placeholder="Number Baths">
-  <input type="submit">
+<h2>New Apartment</h2>
+
+<form action="/apartments" method="post">
+  <label for "apartment[address]">Address:</label>
+  <input name="apartment[address]">
+
+  <label for "apartment[monthly_rent]">Monthly Rent:</label>
+  <input name="apartment[monthly_rent]">
+
+  <label for "apartment[sqft]">Square Footage:</label>
+  <input name="apartment[sqft]">
+
+  <label for "apartment[num_beds]">Number of Beds:</label>
+  <input name="apartment[num_beds]">
+
+  <label for "apartment[num_baths]">Number of Baths:</label>
+  <input name="apartment[num_baths]">
+
+  <input type="submit" value="Create New Apartment">
+
 </form>
