--- a/views/tenants/index.erb
+++ b/views/tenants/index.erb
@@ -1,1 +1,7 @@
-Listing tenants for apartment #3
+<h2>All current tenants:</h2>
+
+<ul>
+  <% @tenants.each do |tenant| %>
+    <li><a href='/apartments/<%= @apartment.id %>/tenants/<%= tenant.id %>'><%= tenant.name%></a></li>
+  <% end %>
+</ul>
