--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,12 @@
-This is info about apartment #3.
+
+<ul>
+    <li>Address: <%= @apartment.address  %></li>
+    <li>Monthly Rent: <%= @apartment.monthly_rent  %></li>
+    <li>Square Feet: <%= @apartment.sqft  %></li>
+    <li>Number of Beds: <%= @apartment.num_beds  %></li>
+    <li>Number of Baths: <%= @apartment.num_baths  %></li>
+</ul>
+
+
+
+<!-- This is info about apartment #3. -->
