completed apartment show

--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,10 @@
-This is info about apartment #3.
+<h2>
+    Apartment# <%= @apartment.id %>
+</h2>
+
+<h4>Address: <%= @apartment.address  %></h4>
+<h4>Monthly Rent: <%= @apartment.monthly_rent %></h4>
+<h4>Square Feet: <%= @apartment.sqft %></h4>
+<h4>Number of Beds: <%= @apartment.num_beds %></h4>
+<h4>Number of Baths: <%= @apartment.num_baths %></h4>
+
