--- a/views/apartments/index.erb
+++ b/views/apartments/index.erb
@@ -1,3 +1,3 @@
 <% @apartments.each do |apartment| %>
-  <li><%= apartment.address %></li>
+  <li><%= apartment.address %>, $<%= apartment.monthly_rent  %></li>
 <% end %>
