--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -1,16 +1,14 @@
-<h1>Welcome to Landlord 4.0</h1>
-
-# ======= index
-<h2>Available Apartments<a href="/apartments/new">()</a></h2>
-<a href="/apartments/new">(+)</a>
+<h2>Available Apartments</h2>
 
 <ul>
   <% @apartments.each do |apartment| %>
-    <li><p><a href="/apartments/<%= apartment.id %>"><%= apartment.address %> --
-      <a href="/apartments/<%= apartment.id %>/edit">edit</a></p>
+    <li><p>
+      <a href="/apartments/<%= apartment.id %>"><%= apartment.address %> </a> --
+      <a href="/apartments/<%= apartment.id %>/edit">edit</a> --
+      <a href="/apartments/<%= apartment.id %>/delete">delete</a></p>
     </li>
   <% end %>
 </ul>
 
-# ======= new
-<h2><a href="/apartments/new">Add new apartment</a></h2>
+<h2>Add a New Apartment</h2>
+<h2><a href="/apartments/new">Add apartment</a></h2>
