--- a/views/apartments/edit.erb
+++ b/views/apartments/edit.erb
@@ -1,10 +1,10 @@
 <h2>Edit Apartment</h2>
 
-<form method="post" action="/apartments/create">
-  <input type="text" placeholder="Address" value="<%= @apartment.address %>">
-  <input type="text" placeholder="Monthly Rent" value="<%= @apartment.monthly_rent %>">
-  <input type="text" placeholder="Square Feet" value="<%= @apartment.sqft %>">
-  <input type="text" placeholder="Number Beds" value="<%= @apartment.num_beds %>">
-  <input type="text" placeholder="Number Baths" value="<%= @apartment.num_baths %>">
-  <input type="submit" value="Create">
+<form method="put" action="/apartments/<%= @apartment.id %>/update">
+  <input type="text" name="address" placeholder="Address" value="<%= @apartment.address %>">
+  <input type="text" name="monthly_rent" placeholder="Monthly Rent" value="<%= @apartment.monthly_rent %>">
+  <input type="text" name="sqft" placeholder="Square Feet" value="<%= @apartment.sqft %>">
+  <input type="text" name="num_beds" placeholder="Number Beds" value="<%= @apartment.num_beds %>">
+  <input type="text" name="num_baths" placeholder="Number Baths" value="<%= @apartment.num_baths %>">
+  <input type="submit" value="Update">
 </form>
