--- a/views/apartments/index.erb
+++ b/views/apartments/index.erb
@@ -1,5 +1,14 @@
+<h2>Available Apartments</h2>
+
 <ul>
-  <li><a href='/apartments/1'>Apartment 1</a></li>
-  <li><a href='/apartments/2'>Apartment 2</a></li>
-  <li><a href='/apartments/3'>Apartment 3</a></li>
+  <% @apartments.each do |apartment| %>
+    <li><p>
+      <a href="/apartments/<%= apartment.id %>"><%= apartment.address %> </a> --
+      <a href="/apartments/<%= apartment.id %>/edit">edit</a> --
+      <a href="/apartments/<%= apartment.id %>/delete">delete</a></p>
+    </li>
+  <% end %>
 </ul>
+
+<h2>New Apartment</h2>
+<h2><a href="/apartments/new">Add new apartment</a></h2>
