--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,8 +1,11 @@
-<h1>Welcome to Landlord 4.0</h1>
+<h2>Now Showing: <%= @apartment.address %></h2>
 
-<h2><%= @apartment.address %></h2>
-
+<h4><%= @apartment.address %></h4>
 <h4><%= @apartment.monthly_rent %></h4>
 <h4><%= @apartment.sqft %></h4>
 <h4><%= @apartment.num_beds %></h4>
 <h4><%= @apartment.num_baths %></h4>
+
+<h2>Current Tenents</h2>
+
+<a href="/apartments/<%= @apartment.id %>tenents">See current tenents</a>
