--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>The Landlord</title> 
+    <title>The Landlord</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
   </head>
   <body>
+    <h1>Welcome to Landlord 4.0</h1>
+
     <nav>
       <a href='/apartments'>List All apartments</a>
       <a href='/apartments/3'>View sample apartment</a>
