--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -1,1 +1,13 @@
 form for adding a new tenant
+<h2>New Tenant</h2>
+
+<form method="post" action="/tenants">
+
+<input type="text" placeholder="name" input name="tenant[name]">
+<input type="INT" placeholder="age" input name="tenant[age]">
+<input type="text" placeholder="gender" input name="tenant[gender]">
+<input type="INT" placeholder="apartment_id" input name="tenant[apartment_id]">
+
+<input type="submit" value="Create Tenant">
+
+</form>
