--- a/views/tenants/index.erb
+++ b/views/tenants/index.erb
@@ -1,1 +1,11 @@
-Listing tenants for apartment #3
+<!-- Listing tenants for apartment #3 -->
+
+<h2>Tenant</h2>
+
+<ul>
+  <% @tenants.each do |tenant| %>
+  <li>
+    <a href ='/tenants/<%= tenant.id %>'><%= tenant.name %></a>
+  </li>
+<%end%>
+</ul>
