--- a/views/tenants/index.erb
+++ b/views/tenants/index.erb
@@ -1,1 +1,23 @@
 Listing tenants for apartment #3
+
+<h1>
+  Tenants
+  <a href="/apartments/<%= @apartment.id %>/tenants/new">(+)</a>
+  for
+  <a href="/apartments/<%= @apartment.id %>">
+    <%= @apartment %>
+  </a>
+</h1>
+
+<% tenants = @apartment.tenants %>
+<% if tenants.size == 0 %>
+  None found
+<% else %>
+  <ul>
+    <% tenants.each do |tenant| %>
+      <li>
+        <%= tenant %>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
