good headway. tenant aspect needs improvement

--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -1,1 +1,8 @@
-form for adding a new tenant
+<h3>Creating New Tenant</h3>
+
+<form method="post" action="/tenants">
+    <input type="text" name="tenant[name]" placeholder="Name">
+    <input type="text" name="tenant[age]" placeholder="Age">
+    <input type="text" name="tenant[gender]" placeholder="Gender">
+    <input type="submit">
+</form>
