--- a/views/apartments/new.erb
+++ b/views/apartments/new.erb
@@ -1,8 +1,10 @@
+<h3>Creating New Apartment</h3>
+
 <form method="post" action="/apartments">
-  <input type="text" placeholder="Address">
-  <input type="text" placeholder="Monthly Rent">
-  <input type="text" placeholder="Square Feet">
-  <input type="text" placeholder="Number Beds">
-  <input type="text" placeholder="Number Baths">
-  <input type="submit">
+    <input type="text" name="apartment[address]" placeholder="Address">
+    <input type="text" name="apartment[monthly_rent]" placeholder="Monthly Rent">
+    <input type="text" name="apartment[sqft]" placeholder="Sqft">
+    <input type="text" name="apartment[num_beds]" placeholder="Number of Beds">
+    <input type="text" name="apartment[num_baths]" placeholder="Number of Baths">
+    <input type="submit">
 </form>
