--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,5 @@
-This is info about apartment #3.
+<h2><%= @apartment.address %></h2>
+<p>Rent: $<%= @apartment.monthly_rent %></p>
+<p>Sqft: <%= @apartment.sqft %></p>
+<p>Number of Beds: <%= @apartment.num_beds %></p>
+<p>Number of Baths: <%= @apartment.num_baths %></p>
