--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>The Landlord</title> 
+    <title>The Landlord</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
   </head>
   <body>
     <nav>
+      <a href="/">Home</a>
       <a href='/apartments'>List All apartments</a>
       <a href='/apartments/3'>View sample apartment</a>
       <a href='/apartments/new'>Create a new apartment</a>
