--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -1,1 +1,8 @@
-form for adding a new tenant
+<h2>Creating New Tenant</h2>
+
+<form method="post" action="/tenants">
+  <input type="text" name="apartment[name]" placeholder="Name">
+  <input type="text" name="apartment[age]" placeholder="Age">
+  <input type="text" name="apartment[gender]" placeholder="Gender">
+  <input type="submit">
+</form>
