--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -1,1 +1,18 @@
-form for adding a new tenant
+<!-- form for adding a new tenant -->
+<h2>New Tenant</h2>
+
+  <form action="/tenant" method="post">
+    <label for="tenant[name]">Name</label>
+    <input name="tenant[name]">
+
+  <form action="/tenant" method="post">
+    <label for="tenant[age]">Age</label>
+    <input name="tenant[age]">
+
+  <form action="/apartment" method="post">
+    <label for="tenant[gender]">Gender</label>
+    <input name="tenent[gender]">
+
+  <input type="submit" value="Create">
+
+</form>
