--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -2,13 +2,13 @@
 
 <form method="post" action="/apartments/<%= @apartment.id %>/tenants">
   <label for="tenant[:name]">Name</label>
-  <input name="apartment[:name]" type="text">
+  <input name="tenant[:name]" type="text">
 
-  <label for="apartment[:age]">Age</label>
-  <input name="apartment[:age]" type="text">
+  <label for="tenant[:age]">Age</label>
+  <input name="tenant[:age]" type="text">
 
-  <label for="apartment[:gender]">Gender</label>
-  <input name="apartment[:gender]" type="text">
+  <label for="tenant[:gender]">Gender</label>
+  <input name="tenant[:gender]" type="text">
 
   <input type="submit">
 </form>
