Updated controllers, added primary 'apartment' functionality, added CSS.

--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -1,1 +1,6 @@
 <h1>Welcome to Landlord 4.0</h1>
+<a class=link href='/apartments'>List all apartments</a>
+<a class=link href='/apartments/3'>View sample apartment</a>
+<a class=link href='/apartments/new'>Create a new apartment</a>
+<a class=link href='/apartments/3/tenants'>List tenants for sample apartment</a>
+<a class=link href='/apartments/3/tenants/new'>Add tenant to apartment</a>
