--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,20 +1,105 @@
-body{
-  font-family:"Helvetica Neue";
-  margin:auto;
-  max-width:40em;
-  padding:1em;
+body {
+  font-family: Arial, sans-serif;
 }
 
-nav{
-  margin-bottom:2em;
+.container {
+  color: #333;
+  background: aliceblue;
+  width: 600px;
+  border: 1px solid #CCC;
+  box-shadow: 0 1px 5px #CCC;
+  border-radius: 5px;
+  font-family: verdana;
+  margin: 25px auto;
+  overflow: hidden;
 }
 
-nav a{
-  display:block;
+header {
+  margin: 0px 0px 20px 0px;
+  font-size: 16px;
+  font-weight: normal;
+  text-shadow: 0 1px 2px white;
+  color: #888;
+  text-align: center;
 }
 
-input[type="text"]{
-  display:block;
-  font:inherit;
-  margin-bottom:.5em;
+h1 {
+  font-size: 1em;
+  background: #f1f1f1;
+  background-image: -webkit-linear-gradient( top, #f1f1f1, #CCC );
+  background-image: -ms-linear-gradient( top, #f1f1f1, #CCC );
+  background-image: -moz-linear-gradient( top, #f1f1f1, #CCC );
+  background-image: -o-linear-gradient( top, #f1f1f1, #CCC );
+  box-shadow: 0 1px 2px #888;
+  padding: 10px;
+  margin: 0px 0px 20px 0px;
+}
+
+p {
+  font-size: .9em;
+  padding: 10px;
+}
+
+.link, li a {
+  font-size: .8em;
+  color: #888;
+  text-decoration: none;
+  display: block;
+  padding: 10px 0px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+}
+
+form {
+  padding: 10px;
+}
+
+label {
+    display: block;
+}
+
+input {
+  margin: 5px;
+  display: inline-block;
+  width: 50%;
+}
+
+input[type="search"] {
+  width: 80%;
+}
+
+input[type="submit"]{
+  display: inline-block;
+  color: #666;
+  background-color: #E2FAD4;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 12px;
+  padding: 5px 20px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border: 1px solid rgba(0,0,0,0.3);
+  border-bottom-width: 3px;
+  margin: 10px 0px 15px 0px;
+}
+
+#return {
+  display: inline-block;
+  color: #666;
+  background-color: #eee;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 12px;
+  padding: 10px 30px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border: 1px solid rgba(0,0,0,0.3);
+  border-bottom-width: 3px;
+  margin: 10px 0px 15px 0px;
 }
