--- a/views/apartments/new.erb
+++ b/views/apartments/new.erb
@@ -1,8 +1,24 @@
+<h1><%= @header_route %></h1>
+
 <form method="post" action="/apartments">
-  <input type="text" placeholder="Address">
-  <input type="text" placeholder="Monthly Rent">
-  <input type="text" placeholder="Square Feet">
-  <input type="text" placeholder="Number Beds">
-  <input type="text" placeholder="Number Baths">
+
+  <label>Address:</label>
+  <input type="text" name="apartment[address]">
+
+  <label>Monthly Rent:</label>
+  <input type="text" name="apartment[monthly_rent]">
+
+  <label>Sqft:</label>
+  <input type="text" name="apartment[sqft]">
+
+  <label>Number of Beds:</label>
+  <input type="text" name="apartment[num_beds]">
+
+  <label>Number of Baths:</label>
+  <input type="text" name="apartment[num_baths]">
+
   <input type="submit">
+
 </form>
+
+  <a class=link id=return href='/'>Return to building</a>
