--- a/views/apartments/show.erb
+++ b/views/apartments/show.erb
@@ -1,1 +1,10 @@
-This is info about apartment #3.
+<h1><%= @header_route %></h1>
+
+<h3>Address: <%= @apartment.address %><a href="/apartments/<%= @apartment.id %>/edit"> (edit)</a></h3>
+
+<h4>Monthly Rent: <%= @apartment.monthly_rent %></h4>
+<h4>Sqft: <%= @apartment.sqft %></h4>
+<h4>Number of Beds: <%= @apartment.num_beds %></h4>
+<h4>Number of Baths: <%= @apartment.num_baths %></h4>
+
+<a class=link id=return href='/'>Return to building</a>
