--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -3,6 +3,6 @@ Add New Tenant
   <input type = "text" name="tenants[name]" placeholder="name">
   <input type = "text" name="tenants[age]" placeholder="age">
   <input type = "text" name="tenants[gender]" placeholder="gender">
-  <input type = "integer" name ="tenant[apartment_id]" value= <%= @apartmentParam %>>
+  <input type = "integer" name ="tenants[apartment_id]" value= <%= @apartmentParam %>>
   <input type="submit">
 </form>
