as far as i think im gonna get

--- a/views/apartments/index.erb
+++ b/views/apartments/index.erb
@@ -3,3 +3,7 @@
   <li><a href='/apartments/2'>Apartment 2</a></li>
   <li><a href='/apartments/3'>Apartment 3</a></li>
 </ul>
+
+<li>
+   <% @apartments.each do |apartment| %>
+</li>
